🐛 fix: nprogress with incorrect version

--- a/apps/notes/package.json
+++ b/apps/notes/package.json
@@ -11,11 +11,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "HydratedPig",
   "license": "ISC",
   "devDependencies": {
     "@vuepress/client": "^2.0.0-beta.38",
     "@vuepress/shared": "^2.0.0-beta.38",
+    "@vuepress/theme-default": "^2.0.0-beta.38",
     "vuepress": "^2.0.0-beta.39"
   }
 }
