--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "HydratedPig",
   "license": "ISC",
   "dependencies": {
     "@rushstack/eslint-patch": "^1.1.3",
