--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hydrated-pig/typescript",
+  "name": "@hydrated-pig/shared",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
