--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue-next",
     "leetcode",
     "javascript",
+    "vuepress",
+    "typescript",
     "etc"
   ],
   "author": "HydratedPig",
