feature: 一些配置、命名修改

--- a/apps/notes/package.json
+++ b/apps/notes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hydrated-pig/notes",
+  "name": "@hydrated-apps/notes",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
