--- a/demos/rollup/package.json
+++ b/demos/rollup/package.json
@@ -2,8 +2,8 @@
   "name": "@hydrated-demos/rollup",
   "version": "1.0.0",
   "description": "demo of rollup",
-  "main": "index.js",
   "scripts": {
+    "bundle": "rollup --config --bundleConfigAsCjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -12,6 +12,7 @@
   "author": "HydratedPig",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^23.0.0",
     "rollup": "^3.1.0"
   }
 }
