--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "notes": "pnpm -F @hydrated-apps/notes docs:dev",
     "demos:bundle": "pnpm -F @hydrated-demos/rollup bundle",
+    "eslint:build": "pnpm -F @hydrated-packages/eslint-config build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,7 +29,12 @@
   },
   "homepage": "https://github.com/HydratedPig/HydratedFrontEnd#readme",
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
     "@hydrated-packages/eslint-config": "workspace:*",
+    "rimraf": "^3.0.2",
     "typescript": "^4.6.3",
     "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.0.0"
