--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf dist && babel --quiet --out-dir dist src --extensions .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "HydratedPig",
@@ -12,6 +13,7 @@
     "@rushstack/eslint-patch": "^1.1.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
+    "core-js": "^3.25.5",
     "eslint": "^8.13.0",
     "eslint-plugin-vue": "^8.6.0",
     "prettier": "^2.6.2"
