--- a/apps/dearqi/package.json
+++ b/apps/dearqi/package.json
@@ -15,5 +15,9 @@
     "@vitejs/plugin-vue": "^3.1.0",
     "vite": "^3.1.0",
     "vue-tsc": "^0.40.4"
+  },
+  "dependencies": {
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   }
 }
