--- a/apps/notes/package.json
+++ b/apps/notes/package.json
@@ -13,10 +13,11 @@
   "keywords": [],
   "author": "HydratedPig",
   "license": "ISC",
+  "dependencies": {
+    "@vuepress/client": "2.0.0-beta.53",
+    "vue": "^3.2.45"
+  },
   "devDependencies": {
-    "@vuepress/client": "^2.0.0-beta.38",
-    "@vuepress/shared": "^2.0.0-beta.38",
-    "@vuepress/theme-default": "^2.0.0-beta.38",
-    "vuepress": "^2.0.0-beta.39"
+    "vuepress": "2.0.0-beta.53"
   }
 }
