--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dearqi:build": "pnpm -F @hydrated-apps/dearqi build",
     "demos:bundle": "pnpm -F @hydrated-demos/rollup bundle",
     "eslint:build": "pnpm -F @hydrated-packages/eslint-config build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "remove:all": "rimraf **/*/node_modules node_modules",
+    "clean": "pnpm --parallel --stream clean",
+    "postinstall": "pnpm eslint:build"
   },
   "repository": {
     "type": "git",
@@ -41,9 +43,16 @@
     "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.0.0"
   },
-  "dependencies": {
-    "nprogress": "^0.2.0",
-    "vue": "^3.2.37",
-    "vue-router": "^4.0.0"
+  "packageManager": "pnpm@7.17.0",
+  "engines": {
+    "node": ">=14.18.0"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "typescript",
+        "webpack"
+      ]
+    }
   }
 }
