--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint:build": "pnpm -F @hydrated-packages/eslint-config build",
     "remove:all": "rimraf **/*/node_modules node_modules",
     "clean": "pnpm --parallel --stream clean",
+    "commit:xmind": "./shell/commit/xmind.sh",
     "postinstall": "pnpm eslint:build && ./shell/postinstall.sh"
   },
   "repository": {
