--- a/package.json
+++ b/package.json
@@ -34,17 +34,17 @@
   },
   "homepage": "https://github.com/HydratedPig/HydratedFrontEnd#readme",
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.19.6",
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-typescript": "^7.18.6",
-    "@hydrated-packages/eslint-config": "workspace:*",
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
+    "@hydrated-packages/eslint-config": "workspace:1.0.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.6.3",
+    "typescript": "^4.9.5",
     "typescript-plugin-css-modules": "^3.4.0",
-    "webpack": "^5.0.0"
+    "webpack": "^5.83.1"
   },
-  "packageManager": "pnpm@7.17.0",
+  "packageManager": "pnpm@8.5.1",
   "engines": {
     "node": ">=14.18.0"
   },
