feature(rust): better prompt for coding and initialize monorepo

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,10 @@
 {
-  "recommendations": ["Vue.volar", "Vue.vscode-typescript-vue-plugin"]
+  "recommendations": [
+    "Vue.volar",
+    "Vue.vscode-typescript-vue-plugin",
+    "tamasfe.even-better-toml",
+    "streetsidesoftware.code-spell-checker",
+    "tamasfe.even-better-toml",
+    "rust-lang.rust-analyzer"
+  ]
 }
