--- a/crates/guessing_number/Cargo.toml
+++ b/crates/guessing_number/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "demo"
-version = "0.1.0"
 edition = "2021"
+name    = "guessing_number"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
