feature(auto:leetcode): add a function to generate leetcode-link

--- a/apps/notes/package.json
+++ b/apps/notes/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
+    "leetcode": "node leetcode.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
