docs(extensions): comment divider

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "tamasfe.even-better-toml",
     "streetsidesoftware.code-spell-checker",
     "tamasfe.even-better-toml",
-    "rust-lang.rust-analyzer"
+    "rust-lang.rust-analyzer",
+    "stackbreak.comment-divider"
   ]
 }
