feature(all): add english corner and fixed theme-default warning and add audio components

--- a/apps/notes/package.json
+++ b/apps/notes/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@hydrated-packages/shared": "workspace:^",
     "@vuepress/client": "2.0.0-beta.53",
+    "@vuepress/theme-default": "^2.0.0-beta.53",
     "vue": "^3.2.45"
   },
   "devDependencies": {
